--- a/style.css
+++ b/style.css
@@ -17,28 +17,28 @@ nav {
     background-color: rgb(83, 82, 82);
 }
 
-.logo {
+.name {
     padding-top: 15px;
 }
 
-.logo a {
+.name a {
     text-decoration: none;
     color: rgb(199, 199, 199);
 }
 
-.items ul li {
+.dashitems ul li {
     list-style: none;
     display: inline-block;
     padding: 15px;
 }
 
-.items a {
+.dashitems a {
     color: rgb(255, 255, 255);
     text-decoration: none;
 
 }
 
-.icons a {
+.dashicon a {
     text-decoration: none;
     padding-top: 15px;
     padding-right: 20px;
@@ -61,22 +61,26 @@ nav {
     width: 350px;
 }
 
-.main {
+.dashboard {
     display: flex;
     justify-content: space-around;
     padding: 40px 50px 40px 50px;
     margin-left: 50px;
 }
 
-/*right*/
-.right {
+.dashboard p {
+    color: white
+}
+
+                                        /*right*/
+.dashright {
     font-size: 1.3rem;
     margin-top: 100px;
     height: 350px;
     width: 530px;
 }
 
-.right h1 {
+.dashright h1 {
     font-size: 3.3rem;
     color: rgb(225, 225, 225);
 }
@@ -90,16 +94,14 @@ nav {
     border-radius: 4px;
 }
 
-.mainhead {
+.startover {
     color: rgb(187, 187, 187);
     font-style: italic;
 }
 
-.main p {
-    color: white
-}
 
-/*center*/
+
+                                            /*center*/
 .center {
     margin-top: 35px;
     background-color: rgb(60, 56, 56);
@@ -117,8 +119,8 @@ nav {
     position: center;
 }
 
-
-.left {
+                                                /*Left*/
+.dashleft {
     margin-top: 75px;
     font-size: 1.3rem;
     height: 280px;
@@ -126,19 +128,19 @@ nav {
     margin-left: 25px;
 }
 
-.hed {
+.profission {
     color: white;
     font-size: 1.8rem;
 }
 
-.hed h5 {
+.profission h5 {
     font-weight: bolder;
     font-size: 2.6rem;
     color: wheat;
     padding-bottom: 15px;
 }
 
-.showmore {
+.show_more {
     background: transparent;
     padding-top: 25px;
     padding-bottom: 25px;
@@ -148,7 +150,7 @@ nav {
     font-size: 1.3rem;
 }
 
-.icon a {
+.dashboardicon a {
     color: rgba(255, 196, 0, 0.836);
     border: 1.5px;
     padding: 10px;
@@ -157,18 +159,11 @@ nav {
     text-decoration: none;
 }
 
-/***************Second******************/
-.sec {
-    height: 140vh;
-    width: 100%;
-    background-color: rgb(34, 31, 31);
-    margin-top: -10px;
-    z-index: -1;
-}
+                                                /*profileLinks*/
 
-.second {
+.profileLinks {
     height: 100px;
-    margin: 80px auto;
+    margin: 100px auto;
     width: 75%;
     background-color: rgb(69, 66, 66);
     position: relative;
@@ -177,28 +172,38 @@ nav {
     justify-content: space-around;
 }
 
-.second button {
+.profileLinks button {
     margin-top: 15px;
     height: 60px;
     width: 130px;
 }
 
-.second button img {
+.profileLinks button img {
     height: 50px;
     width: 120px;
 }
 
 
-/***********Third************/
+                                                /*about*/
+.about {
+    height: 120vh;
+    width: 100%;
+    background-color: rgb(53, 51, 51);
+    margin-top: 0px;
+    z-index: 1;
+}
 
-.under {
+
+                                                /*ProfileInfo*/
+
+.info {
     display: flex;
-    z-index: -11;
+    z-index: 11;
     justify-content: space-around;
 
 }
 
-.third1 {
+.infoQuestion {
     height: 400px;
     width: 500px;
     margin-left: 70px;
@@ -206,48 +211,49 @@ nav {
 }
 
 
-.third1 h3 {
+.infoQuestion h3 {
     font-weight: bolder;
     font-size: 2.7rem;
     color: white;
 }
 
-.third1 p {
+.infoQuestion p {
     color: white;
     padding: 12px;
     font-family: 'Courier New', Courier, monospace;
 }
 
-/********Box*********/
-.box {
+                                                /*ProjectInfo*/
+
+.projectInfo {
     display: flex;
     flex-flow: wrap-reverse;
     color: white;
 }
 
-.item {
+.item-names {
     width: 100%
 }
 
-.box {
+.projectInfo {
     display: flex;
     flex-wrap: wrap;
 }
 
-.box>div {
+.projectInfo>div {
     flex: 50%;
     margin-bottom: 30px;
 }
 
 
-.item h3 {
+.item-names h3 {
     font-size: 1.5rem;
     font-weight: bold;
     color: rgba(255, 196, 0, 0.836);
 
 }
 
-.item .itemss {
+.item-names .itemss {
     font-size: 1.4rem;
     font-weight: light;
     color: rgb(0, 118, 203);
@@ -256,14 +262,14 @@ nav {
 
 
 
-.third2 {
+.projects {
     margin-top: 200px;
-    height: 450px;
+    height: 750px;
     width: 550px;
     margin-right: 50px;
 }
 
-.third21 {
+.projectUiUx {
     height: 130px;
     width: 550px;
     display: flex;
@@ -272,26 +278,26 @@ nav {
 }
 
 
-.third21 img {
+.projectUiUx img {
 
     height: 120px;
     width: 150px;
 }
 
-.third22 {
+.projectDev {
     height: 125px;
     width: 500px;
     display: flex;
     margin-top: 15px;
 }
 
-.third22 img {
+.projectDev img {
     height: 120px;
     width: 150px;
 }
 
 
-.third23 {
+.projectMob {
     height: 125px;
     margin-top: 25px;
     width: 500px;
@@ -299,7 +305,7 @@ nav {
 
 }
 
-.third23 img {
+.projectMob img {
     height: 120px;
     width: 150px;
 }
@@ -350,66 +356,80 @@ nav {
 
 }
 
-.bottom {
-    height: 450px;
+.techInfo {
+    height: 550px;
     width: 100%;
     display: flex;
-    margin: -200px auto;
+    margin: 0px auto;
     padding: auto;
-    background-color: rgb(36, 37, 37);
+    background-color: rgb(96, 97, 97);
 }
 
-.bottom1 {
+.techUiUx {
     height: 410px;
     width: 350px;
-    background-color: rgb(53, 53, 53);
+    background-color: rgb(34, 34, 34);
     color: white;
     margin-left: 75px;
     padding: 10px;
-
+    margin-top: 30px;
 }
 
-.bottom1 img {
+.techUiUx img {
     height: 40px;
     width: 40px;
 }
 
-.bottom2 {
+.techWeb {
     height: 410px;
     width: 350px;
-    background-color: rgb(53, 53, 53);
+    background-color: rgb(34, 34, 34);
     color: white;
     margin-left: 50px;
     padding: 10px;
-
+    margin-top: auto;
+    margin-top: 30px;
 }
 
-.bottom2 img {
+.techWeb img {
     height: 40px;
     width: 40px;
 }
 
-.bottom3 {
-    background-color: rgb(53, 53, 53);
+.techMob {
+    background-color: rgb(34, 34, 34);
     color: white;
     height: 410px;
     width: 350px;
     margin-left: 50px;
     padding: 10px;
-
+    margin-top: auto;
+    margin-top: 30px;
 }
 
-.bottom3 img {
+.techMob img {
     height: 40px;
     width: 40px;
 }
 
-
-.para {
-
-    background-color: rgb(108, 15, 15);
-    color: rgb(81, 0, 255);
-    padding: 15px;
+.footer_content{
+    height: 10vh;
+    width: 100%;
+    background-color: rgb(53, 51, 51);
     text-align: center;
-    border-top: 1px solid rgb(255, 255, 255);
+    color: wheat;
+}
+
+.footer_content a{
+    color: rgb(229, 229, 229);
+}
+
+.footer_content h2{
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.footer_content p{
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
 }
