--- a/style.css
+++ b/style.css
@@ -1,3 +1,68 @@
+/* Small screens */
+@media only screen and (max-width: 600px) {
+    .navbar {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .dashitems {
+      margin-top: 20px;
+      text-align: center;
+    }
+  
+    .dashicon {
+      margin-top: 20px;
+      display: flex;
+      justify-content: space-around;
+      width: 100%;
+    }
+  }
+  
+  /* Medium screens */
+  @media only screen and (min-width: 601px) and (max-width: 900px) {
+    .navbar {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  
+    .dashitems {
+      margin: 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 50%;
+    }
+  
+    .dashicon {
+      width: 50%;
+      display: flex;
+      justify-content: flex-end;
+    }
+  }
+  
+  /* Large screens */
+  @media only screen and (min-width: 901px) {
+    .navbar {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  
+    .dashitems {
+      margin: 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 50%;
+    }
+  
+    .dashicon {
+      width: 50%;
+      display: flex;
+      justify-content: flex-end;
+    }
+  }
+  
+
 * {
     margin: 0;
     padding: 0;
